# C--projects

data_structres_practice/: CMakeLists.txt  README.md  tests_ex6_suchetzky.cpp
movie_recommender_system/: CMakeLists.txt  README.md  newtest.cpp  presubmit.cpp  test.cpp
number_identifier/: CMakeLists.txt
